fixes to the user show and css alignment issues

--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -60,6 +60,7 @@
   width: 150px;
   height: 150px;
   overflow: hidden;
+  display: inline-block;
 }
 
 .image-search-item{
