--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -83,7 +83,6 @@
 }
 
 .pending-items-display{
-  text-align: center;
   width: 87%;
   margin: auto;
 }
